lnet/klnds/socklnd/socklnd_cb.c
@@ -995,7 +995,6 @@ ksocknal_send(struct lnet_ni *ni, void *private, struct lnet_msg *lntmsg)
 	       payload_nob, payload_niov, libcfs_idstr(target));
 
 	LASSERT (payload_nob == 0 || payload_niov > 0);
-	LASSERT (payload_niov <= LNET_MAX_IOV);
 	LASSERT (!in_interrupt ());
 
 	desc_size = offsetof(struct ksock_tx,
@@ -1021,6 +1020,8 @@ ksocknal_send(struct lnet_ni *ni, void *private, struct lnet_msg *lntmsg)
 	tx->tx_nkiov = lnet_extract_kiov(payload_niov, tx->tx_kiov,
 					 payload_niov, payload_kiov,
 					 payload_offset, payload_nob);
+
+	LASSERT(tx->tx_nkiov <= LNET_MAX_IOV);
 
 	if (payload_nob >= *ksocknal_tunables.ksnd_zc_min_payload)
 		tx->tx_zc_capable = 1;
@@ -1365,7 +1366,6 @@ ksocknal_recv(struct lnet_ni *ni, void *private, struct lnet_msg *msg,
 	struct ksock_sched *sched = conn->ksnc_scheduler;
 
         LASSERT (mlen <= rlen);
-        LASSERT (niov <= LNET_MAX_IOV);
 
 	conn->ksnc_lnet_msg = msg;
 	conn->ksnc_rx_nob_wanted = mlen;
@@ -1385,6 +1385,7 @@ ksocknal_recv(struct lnet_ni *ni, void *private, struct lnet_msg *msg,
 					  niov, kiov, offset, mlen);
 	}
 
+	LASSERT(conn->ksnc_rx_nkiov <= LNET_MAX_IOV);
         LASSERT (mlen ==
                  lnet_iov_nob (conn->ksnc_rx_niov, conn->ksnc_rx_iov) +
                  lnet_kiov_nob (conn->ksnc_rx_nkiov, conn->ksnc_rx_kiov));
